# koatl

./: .gitignore  CONTEXT_CODEBASE.md  CONTEXT_LANGUAGE.md  Cargo.toml  README.md  test.py  test_format.tl
coatl/: Cargo.toml  pyproject.toml  requirements.txt
coatl-core/: Cargo.toml
coatl-kernel/: CHANGELOG.md  README.rst  hatch_build.py  package-lock.json  pyproject.toml
coatl-python/: Cargo.toml  README.md  pyproject.toml
coatl/parser/src/: ast.rs  lexer.rs  parser.rs  util.rs
coatl/parser/tests/: lexer.rs
coatl/python/coatl/: __init__.py  __main__.py  cli.py
coatl/python/coatl/notebook/: __init__.py  magic.py
coatl/python/coatl/prelude/: Untitled-1.ipynb  __init__.tl  functional.tl
coatl/python/coatl/runtime/: __init__.py  meta_finder.py
coatl/src/: ast.rs  ast_util.rs  emit_py.rs  lib.rs  main.rs  py.rs  py_ast.rs  py_gen.rs  trans_ast.rs  transform.rs
coatl/src/py/: ast.rs  emit.rs  util.rs
coatl/tests/: test_e2e.py
coatl/tests/e2e/: coal.tl  decorators.tl  destructure-for-and-fn.tl  destructure.tl  fstr.tl  functions.tl  if_expr.tl  match.tl  nary-list.tl  placeholder.tl  slice.tl  try.tl  try_expr.tl  util.py
docs/: CNAME  containers.md  coverpage.md  delegate.md  extensions.md  formatting.md  index.html  intro.md  match.md  modules.md  monads.md  operators.md  prelude.md  sidebar.md  troubleshooting.md
koatl/: Cargo.toml  README.md  pyproject.toml  requirements.txt
koatl-core/: Cargo.toml
koatl-kernel/: README.md  hatch_build.py  pyproject.toml
koatl-kernel/koatl_kernel/: __init__.py  __main__.py  kernel.py  shell.py
koatl-parser/: Cargo.toml
language-server/: jest.config.cjs  package-lock.json  package.json  tsconfig.json
(+266 files in other folders)
